## Process this file with automake to produce Makefile.in

if RDD_GUI
SUBDIRS = src test gui
else
SUBDIRS = src test
endif

EXTRA_DIST = 	test/test001 \
		test/test002 \
		test/test003 \
		test/test004 \
		test/test005 \
		test/test006 \
		test/blockhash.py \
		test/driver-writer \
		test/errorcodes.txt \
		test/simfile.txt \
		test/tmsgprinter.py \
		test/tmsgprinter.sh \
		test/tmsgprinter.sh.in \
		test/trunmd5blockfilter.sh \
		test/trunmd5blockfilter.sh.in \
		test/ttcpwriter.py \
		test/ttcpwriter.sh \
		test/ttcpwriter.sh.in
